# mcps_ibd_freq_calc

./: README.md
calc-ibd-freq/: LICENSE  README.md  setup.cfg  setup.py
calc-ibd-freq/src/ibd_freq_estimator/: ancestry_file.py  estimate_frequencies.py  fam_file.py  ibd_file.py  ibd_graph_sequence.py  logging_config.py
calc-ibd-freq/test/: test_estimate_frequencies.py  test_graphs.py  test_ibd_file.py  test_ibd_graph.py
calc-ibd-freq/test/data/: ibd_segs.txt  ibd_segs_2.txt  test.vcf.gz.tbi  test_ancestry.vcf.gz.tbi  test_short.vcf.gz.tbi
mcps-rfmix-processing/: readme.md  rfmix-exome.py  rfmix-input.py  rfmix-process.py
mcps-rfmix-processing/scripts/rfmix/exome/: 01-interpolate-exome-freq.R  02-interpolate-lai-vcf.R  02b-interpolate-lai-vcf.R  02c-interpolate-lai-vcf.R
mcps-rfmix-processing/scripts/rfmix/process/: 01b-derive-lanc-stats.R  02-ganc.R  02b-ganc-samples.R  03-nvariants.R  04-plot-lanc-clean.R  04b-plot-lanc-clean-rgc-panel.R  05-plot-lanc-raw-vc-clean.R  06-batches.R  07-plot-lanc-k7-noRR-vs-RR.R
