[metadata]
name = ibd-freq-calc
version = 0.0.1
author = Tyler Joseph
author_email = tyler.joseph@regeneron.com
description = Computed relatedness corrected allele frequencies from IBD segments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
include_package_data = True

python_requires = >=3.6

install_requires =
    numpy >= 1.19.0
    pysam >= 0.16.0.1
    xopen
    scipy

[options.packages.find]
where = src
exclude =
    test
    test.*

[options.entry_points]
console_scripts =
    calc-ibd-freq = ibd_freq_estimator.estimate_frequencies:main
